com java 11 e outras modificações

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,4 @@
 spring.profiles.active=dev
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=86400000
-
-aws.access_key_id=AKIAZAOBCUFNLOEZTAF7
-aws.secret_access_key=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
-s3.bucket=teste-curso-andresa
-s3.region=sa-east-1
-
-img.prefix.client.profile=cp
-img.profile.size=200
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+jwt.expiration=864000
