--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=
 
 #spring.jpa.hibernate.ddl-auto=none //aqui cria novamente o bd create ou none
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# TLS , port 587
-spring.mail.properties.mail.smtp.starttls.enable=true
